Show tile-tree at the right side by default
https://github.com/Juicy/juicy-tile-editor/issues/81

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -193,7 +193,7 @@
       
     <juicy-draggable elementid="sidebar" handleid="sidebarHeader" position="fixed" id="sidebarDrag">
         <juicy-resizable righthandle=".resize-right" lefthandle=".resize-left" id="sidebarResize">
-            <div class="sidebar left" id="sidebar">
+            <div class="sidebar right" id="sidebar">
                 <div class="resize-right"></div>
                 <div class="resize-left"></div>
                 <span class="actions">
