Enable calculate button for precalculate tiles

--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -555,7 +555,7 @@
                         <div class="expandable">
                             <button class="editable" on-click="{{widthIncrease}}" disabled?="{{precalculateWidth}}">+</button>
                             <button class="editable" on-click="{{widthDecrease}}" disabled?="{{precalculateWidth}}">-</button>
-                            <button class="editable" on-click="{{widthCalculate}}" disabled?="{{precalculateWidth}}">calculate</button>
+                            <button class="editable" on-click="{{widthCalculate}}">calculate</button>
                             <!--<div>
                                 <label class="editable"><input id="precalculateWidthCheckbox" type="checkbox" data-applyvalue="precalculateWidth" checked="{{precalculateWidth}}"> precalculate</label>
                             </div>-->
@@ -588,7 +588,7 @@
                         <div class="expandable">
                             <button class="editable" on-click="{{heightIncrease}}" disabled?="{{precalculateHeight}}">+</button>
                             <button class="editable" on-click="{{heightDecrease}}" disabled?="{{precalculateHeight}}">-</button>
-                            <button class="editable" on-click="{{heightCalculate}}" disabled?="{{precalculateHeight}}">calculate</button>
+                            <button class="editable" on-click="{{heightCalculate}}">calculate</button>
                             <!--<div>
                                 <label class="editable"><input id="precalculateHeightCheckbox" type="checkbox" data-applyvalue="precalculateHeight" checked="{{precalculateHeight}}"> precalculate</label>
                             </div>-->
