Comment out an outdated example, fixed precalculate
https://github.com/Juicy/juicy-tile-editor/issues/82

--- a/examples/juicy-tile-grid/demo.html
+++ b/examples/juicy-tile-grid/demo.html
@@ -160,7 +160,7 @@
     "precalculateHeight": true
 }</pre>
             </div>
-            <h1>Auto Width</h1>
+            <!--<h1>Auto Width</h1>
             <p>
                 Add any number of auto sizing tiles to a grid. Let the grid figure it out.
                 <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
@@ -198,7 +198,7 @@
     ]
 }
 </pre>
-            </div>
+            </div>-->
             <h1>Reordering</h1>
             <p>
                 Change priority to reorder tiles.
